--- a/archive.html
+++ b/archive.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Game Archive | FND Games</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #fff8f0;
+      color: #001f4d;
+      padding: 2rem;
+      text-align: center;
+    }
+    h1 {
+      color: #ff5e00;
+    }
+    .game {
+      background: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      margin: 1.5rem auto;
+      padding: 1rem;
+      max-width: 500px;
+    }
+    .game h2 {
+      color: #001f4d;
+      margin-bottom: 0.5rem;
+    }
+    .game p {
+      font-size: 1rem;
+      margin-bottom: 0.5rem;
+    }
+    .btn {
+      background-color: #ff5e00;
+      color: white;
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 8px;
+      text-decoration: none;
+      font-size: 1rem;
+      display: inline-block;
+    }
+  </style>
+</head>
+<body>
+  <h1>🕹️ Game Archive</h1>
+  <p>Missed a challenge? Catch up on our past brain-boosting games below!</p>
+
+  <div class="game">
+    <h2>June – Focus Challenge</h2>
+    <p>Test your reaction time in this 30-second speed test!</p>
+    <a href="https://notdefinedbyfnd.github.io/FND-Games/june.html" class="btn" target="_blank">Play Now</a>
+  </div>
+
+  <div class="game">
+    <h2>July – Memory Match: 10-Second Recall</h2>
+    <p>Memorize a pattern and rebuild it before the timer runs out!</p>
+    <a href="https://notdefinedbyfnd.github.io/FND-Games/july.html" class="btn" target="_blank">Play Now</a>
+  </div>
+
+  <p style="margin-top: 2rem; font-style: italic;">More games coming soon!</p>
+</body>
+</html>
 
