--- a/current.html
+++ b/current.html
@@ -1,233 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Memory Match: 10-Second Recall</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Reaction Race: Color Pop Edition</title>
   <style>
     body {
       font-family: Arial, sans-serif;
+      background: #fff8f0;
+      color: #001f4d;
       text-align: center;
-      background-color: #fff8f0;
-      color: #001f4d;
-      padding: 20px;
+      padding: 2rem;
     }
-
     h1 {
-      color: #001f4d;
+      color: #ff5e00;
     }
-
-    .logo {
-      max-width: 160px;
-      margin-bottom: 20px;
+    #logo {
+      width: 150px;
+      margin-bottom: 1rem;
     }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(4, 60px);
-      grid-gap: 10px;
-      justify-content: center;
-      margin: 20px auto;
+    #gameArea {
+      margin-top: 2rem;
     }
-
-    .tile {
-      width: 60px;
-      height: 60px;
-      background-color: #ccc;
-      border-radius: 8px;
+    .circle {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      background-color: gray;
+      display: inline-block;
+      margin: 10px;
       cursor: pointer;
     }
-
-    .tile.highlight {
+    .active {
       background-color: #ff5e00;
     }
-
-    .tile.correct {
-      background-color: #4caf50;
-    }
-
-    .tile.wrong {
-      background-color: #f44336;
-    }
-
-    #start-btn, #restart-btn {
-      background-color: #ff5e00;
+    button {
+      background: #ff5e00;
       color: white;
       padding: 10px 20px;
-      font-size: 1rem;
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      margin: 10px;
-    }
-
-    #controls {
-      margin-top: 15px;
-    }
-
-    #timer {
-      font-size: 1.2rem;
-      margin-top: 10px;
-    }
-
-    select {
-      padding: 5px;
       font-size: 1rem;
-      border-radius: 5px;
-      margin-left: 10px;
+      margin: 0.5rem;
     }
-
-    #message {
-      margin-top: 20px;
+    #scoreBoard {
+      margin-top: 1rem;
       font-size: 1.2rem;
     }
   </style>
 </head>
 <body>
+  <img id="logo" src="https://notdefinedbyfnd.github.io/FND-Games/logo.png" alt="FND Logo">
+  <h1>🎯 Reaction Race: Color Pop Edition</h1>
+  <p>Click the orange circles as fast as you can before time runs out!</p>
 
-  <img src="https://notdefinedbyfnd.github.io/FND-Games/assets/not-defined-by-fnd-logo.png" alt="Not Defined By FND Logo" class="logo" />
-  <h1>🧠 Memory Match: 10-Second Recall</h1>
-  <p>Watch a pattern for 10 seconds, then recreate it from memory. Choose your challenge!</p>
-
-  <div id="controls">
-    <label for="difficulty">Difficulty:</label>
-    <select id="difficulty">
-      <option value="easy">Easy (3 tiles)</option>
-      <option value="medium" selected>Medium (5 tiles)</option>
-      <option value="hard">Hard (7 tiles)</option>
-    </select>
+  <div>
+    <p>Select Difficulty:</p>
+    <button onclick="setDifficulty(1500)">Easy</button>
+    <button onclick="setDifficulty(1000)">Medium</button>
+    <button onclick="setDifficulty(600)">Hard</button>
   </div>
 
-  <div class="grid" id="grid"></div>
+  <div id="gameArea"></div>
 
-  <div id="timer"></div>
+  <div id="scoreBoard">
+    <p>Time Left: <span id="timeLeft">30</span>s</p>
+    <p>Score: <span id="score">0</span></p>
+  </div>
 
-  <button id="start-btn">Start Game</button>
-  <button id="restart-btn" style="display:none;">Try Again</button>
-
-  <div id="message"></div>
+  <button id="startBtn">Start Game</button>
+  <button id="restartBtn" style="display: none;">Play Again</button>
 
   <script>
-    const grid = document.getElementById('grid');
-    const startBtn = document.getElementById('start-btn');
-    const restartBtn = document.getElementById('restart-btn');
-    const message = document.getElementById('message');
-    const timerDisplay = document.getElementById('timer');
-    const difficultySelect = document.getElementById('difficulty');
+    const gameArea = document.getElementById('gameArea');
+    const startBtn = document.getElementById('startBtn');
+    const restartBtn = document.getElementById('restartBtn');
+    const scoreDisplay = document.getElementById('score');
+    const timeLeftDisplay = document.getElementById('timeLeft');
 
-    let pattern = [];
-    let userPattern = [];
-    let gameActive = false;
+    let score = 0;
     let timeLeft = 30;
-    let timerInterval;
-    let difficultyMap = {
-      easy: 3,
-      medium: 5,
-      hard: 7
-    };
+    let interval;
+    let activeCircle = null;
+    let difficulty = 1000; // default to Medium
+    let popTimeout;
 
-    function createGrid() {
-      grid.innerHTML = '';
-      for (let i = 0; i < 16; i++) {
-        const tile = document.createElement('div');
-        tile.classList.add('tile');
-        tile.dataset.index = i;
-        tile.addEventListener('click', handleTileClick);
-        grid.appendChild(tile);
+    function setDifficulty(ms) {
+      difficulty = ms;
+    }
+
+    function createCircles() {
+      gameArea.innerHTML = '';
+      for (let i = 0; i < 6; i++) {
+        const circle = document.createElement('div');
+        circle.classList.add('circle');
+        circle.addEventListener('click', () => {
+          if (circle === activeCircle) {
+            score++;
+            scoreDisplay.textContent = score;
+            activateRandomCircle();
+          }
+        });
+        gameArea.appendChild(circle);
       }
     }
 
-    function generatePattern() {
-      pattern = [];
-      const count = difficultyMap[difficultySelect.value];
-      while (pattern.length < count) {
-        const rand = Math.floor(Math.random() * 16);
-        if (!pattern.includes(rand)) {
-          pattern.push(rand);
-        }
-      }
-    }
-
-    function showPattern() {
-      pattern.forEach(index => {
-        const tile = grid.children[index];
-        tile.classList.add('highlight');
-      });
-      setTimeout(hidePattern, 10000);
-    }
-
-    function hidePattern() {
-      for (const tile of grid.children) {
-        tile.classList.remove('highlight');
-      }
-      gameActive = true;
-      message.textContent = "Now recreate the pattern!";
-      startCountdown();
-    }
-
-    function handleTileClick(e) {
-      if (!gameActive) return;
-      const index = parseInt(e.target.dataset.index);
-      if (!userPattern.includes(index)) {
-        userPattern.push(index);
-        if (pattern.includes(index)) {
-          e.target.classList.add('correct');
-        } else {
-          e.target.classList.add('wrong');
-        }
-      }
-
-      if (userPattern.length === pattern.length) {
-        stopCountdown();
-        checkResults();
-      }
-    }
-
-    function checkResults() {
-      gameActive = false;
-      let score = 0;
-      userPattern.forEach(i => {
-        if (pattern.includes(i)) score++;
-      });
-      const bonus = Math.max(0, timeLeft);
-      message.textContent = `You got ${score}/${pattern.length} right. Time bonus: ${bonus} sec. Final Score: ${score + bonus}`;
-      restartBtn.style.display = 'inline-block';
-      timerDisplay.textContent = '';
-    }
-
-    function startCountdown() {
-      timeLeft = 30;
-      timerDisplay.textContent = `Time Left: ${timeLeft}s`;
-      timerInterval = setInterval(() => {
-        timeLeft--;
-        timerDisplay.textContent = `Time Left: ${timeLeft}s`;
-        if (timeLeft <= 0) {
-          clearInterval(timerInterval);
-          gameActive = false;
-          checkResults();
-        }
-      }, 1000);
-    }
-
-    function stopCountdown() {
-      clearInterval(timerInterval);
+    function activateRandomCircle() {
+      const circles = document.querySelectorAll('.circle');
+      circles.forEach(c => c.classList.remove('active'));
+      const randomIndex = Math.floor(Math.random() * circles.length);
+      activeCircle = circles[randomIndex];
+      activeCircle.classList.add('active');
+      clearTimeout(popTimeout);
+      popTimeout = setTimeout(() => {
+        if (activeCircle) activeCircle.classList.remove('active');
+        activateRandomCircle();
+      }, difficulty);
     }
 
     function startGame() {
-      userPattern = [];
-      gameActive = false;
-      message.textContent = '';
+      score = 0;
+      timeLeft = 30;
+      scoreDisplay.textContent = score;
+      timeLeftDisplay.textContent = timeLeft;
       startBtn.style.display = 'none';
       restartBtn.style.display = 'none';
-      timerDisplay.textContent = '';
-      createGrid();
-      generatePattern();
-      showPattern();
+      createCircles();
+      activateRandomCircle();
+      interval = setInterval(() => {
+        timeLeft--;
+        timeLeftDisplay.textContent = timeLeft;
+        if (timeLeft <= 0) endGame();
+      }, 1000);
+    }
+
+    function endGame() {
+      clearInterval(interval);
+      clearTimeout(popTimeout);
+      gameArea.innerHTML = `<h2>Time's up! You scored ${score}!</h2>`;
+      restartBtn.style.display = 'inline-block';
     }
 
     startBtn.addEventListener('click', startGame);
     restartBtn.addEventListener('click', startGame);
-    createGrid();
   </script>
 </body>
 </html>
