--- a/current.html
+++ b/current.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Word Scramble: Brain Buzz</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pattern Pulse: Sequence Builder</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #fff8f0;
+      background: #f5faff;
       color: #001f4d;
       text-align: center;
       padding: 2rem;
@@ -19,104 +19,113 @@
       width: 150px;
       margin-bottom: 1rem;
     }
-    #scrambledWord {
-      font-size: 2rem;
-      margin: 1rem 0;
-      letter-spacing: 3px;
+    #gameBoard {
+      display: grid;
+      grid-template-columns: repeat(2, 100px);
+      grid-gap: 20px;
+      justify-content: center;
+      margin-top: 2rem;
     }
-    input[type="text"] {
-      font-size: 1.2rem;
-      padding: 8px;
-      width: 200px;
+    .tile {
+      width: 100px;
+      height: 100px;
+      background-color: #ccc;
+      border: 3px solid #001f4d;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+    .active {
+      background-color: #ff5e00 !important;
     }
     button {
-      background: #ff5e00;
+      background: #001f4d;
       color: white;
       border: none;
       padding: 10px 20px;
-      margin-top: 1rem;
       font-size: 1rem;
       border-radius: 6px;
       cursor: pointer;
+      margin: 1rem;
     }
-    #feedback {
-      margin-top: 1rem;
-      font-weight: bold;
-    }
-    #scoreBoard {
-      margin-top: 1rem;
+    #status {
       font-size: 1.2rem;
+      margin-top: 1rem;
     }
   </style>
 </head>
 <body>
   <img id="logo" src="https://notdefinedbyfnd.github.io/FND-Games/logo.png" alt="FND Logo">
-  <h1>🧠 Word Scramble: Brain Buzz</h1>
-  <p>Unscramble the letters to find the correct word. A fun way to boost cognitive flexibility and word recall!</p>
-
-  <div id="scrambledWord">Loading...</div>
-  <input type="text" id="guessInput" placeholder="Your guess" />
-  <br />
-  <button onclick="submitGuess()">Submit</button>
-  <div id="feedback"></div>
-
-  <div id="scoreBoard">
-    <p>Score: <span id="score">0</span></p>
-    <p>Round: <span id="round">1</span> / 10</p>
+  <h1>🔁 Pattern Pulse: Sequence Builder</h1>
+  <p>Watch the pattern, then repeat it! Can you keep up?</p>
+  <button onclick="startGame()">Start Game</button>
+  <div id="gameBoard">
+    <div class="tile" id="0" onclick="handleClick(0)"></div>
+    <div class="tile" id="1" onclick="handleClick(1)"></div>
+    <div class="tile" id="2" onclick="handleClick(2)"></div>
+    <div class="tile" id="3" onclick="handleClick(3)"></div>
   </div>
+  <div id="status"></div>
 
   <script>
-    const words = [
-      "focus", "brain", "health", "retrain", "neuron", "signal", "energy", "balance", "calm", "resilience"
-    ];
+    const tiles = document.querySelectorAll('.tile');
+    const status = document.getElementById('status');
 
-    let currentWord = "";
-    let scrambled = "";
-    let score = 0;
-    let round = 1;
+    let sequence = [];
+    let playerSequence = [];
+    let round = 0;
+    let acceptingInput = false;
 
-    const scrambledWordDiv = document.getElementById("scrambledWord");
-    const input = document.getElementById("guessInput");
-    const feedback = document.getElementById("feedback");
-    const scoreDisplay = document.getElementById("score");
-    const roundDisplay = document.getElementById("round");
-
-    function scramble(word) {
-      return word.split('').sort(() => 0.5 - Math.random()).join('');
+    function startGame() {
+      sequence = [];
+      playerSequence = [];
+      round = 0;
+      status.textContent = '';
+      nextRound();
     }
 
     function nextRound() {
-      if (round > 10) {
-        scrambledWordDiv.textContent = `Game over! Final score: ${score}`;
-        input.style.display = "none";
-        feedback.textContent = "Refresh to play again!";
+      acceptingInput = false;
+      playerSequence = [];
+      const nextTile = Math.floor(Math.random() * 4);
+      sequence.push(nextTile);
+      round++;
+      status.textContent = `Round ${round}`;
+      playSequence();
+    }
+
+    function playSequence() {
+      let i = 0;
+      const interval = setInterval(() => {
+        highlightTile(sequence[i]);
+        i++;
+        if (i >= sequence.length) {
+          clearInterval(interval);
+          acceptingInput = true;
+        }
+      }, 700);
+    }
+
+    function highlightTile(index) {
+      tiles[index].classList.add('active');
+      setTimeout(() => tiles[index].classList.remove('active'), 400);
+    }
+
+    function handleClick(index) {
+      if (!acceptingInput) return;
+      playerSequence.push(index);
+      highlightTile(index);
+
+      const currentStep = playerSequence.length - 1;
+      if (playerSequence[currentStep] !== sequence[currentStep]) {
+        status.textContent = `❌ Wrong pattern! You reached round ${round}.`;
+        acceptingInput = false;
         return;
       }
-      currentWord = words[Math.floor(Math.random() * words.length)];
-      scrambled = scramble(currentWord);
-      while (scrambled === currentWord) {
-        scrambled = scramble(currentWord);
-      }
-      scrambledWordDiv.textContent = scrambled;
-      input.value = "";
-      feedback.textContent = "";
-    }
 
-    function submitGuess() {
-      const guess = input.value.toLowerCase();
-      if (guess === currentWord) {
-        score++;
-        feedback.textContent = "✅ Correct!";
-        scoreDisplay.textContent = score;
-      } else {
-        feedback.textContent = `❌ Oops! The word was "${currentWord}".`;
+      if (playerSequence.length === sequence.length) {
+        setTimeout(() => nextRound(), 1000);
       }
-      round++;
-      roundDisplay.textContent = round <= 10 ? round : 10;
-      setTimeout(nextRound, 1500);
     }
-
-    nextRound();
   </script>
 </body>
 </html>
